fix overlapping buttons

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -125,6 +125,7 @@ main {
   position: relative !important;
   left: 0 !important;
   top: 0 !important;
+  transform: none !important;
   
   z-index: 9999 !important;
   
